--- a/home.html
+++ b/home.html
@@ -213,40 +213,14 @@ li {
 
 <script type="text/javascript">
 
-var pickNumber = 1;
-var pickOrder = [];
-var threeRolls = [0,0,0];
-var combinationRolls = [];
-var teamHasBeenPickedList = [false, false, false, false, false];
+var pickNumber;
+var pickOrder;
+var threeRolls;
+var combinationRolls;
+var teamHasBeenPickedList;
 var teamNumbers;
-var teamNamesMap = {
-    "Team 1"  :  "Scranton Stranglers", 
-    "Team 2"  :  "Nuclear Guam", 
-    "Team 3"  :  "Big Baller Brown", 
-    "Team 4"  :  "Tompkins CAT", 
-    "Team 5"  :  "Richmond Rogues", 
-    "Team 6"  :  "Ithaca Ivy Leaguers", 
-    "Team 7"  :  "Team Synchro", 
-    "Team 8"  :  "Boston Jellyfam", 
-    "Team 9"  :  "Team Droptop", 
-    "Team 10" :  "Luzern's Iron Chef", 
-    "Team 11" :  "Wolf Wall", 
-    "Team 12" :  "Tysons Traffic"
-  };
-var teamOddsMap = {
-    "Team 1"  :  .430, 
-    "Team 2"  :  .265, 
-    "Team 3"  :  .165, 
-    "Team 4"  :  .090, 
-    "Team 5"  :  .05,
-    "Team 6"  :  0, 
-    "Team 7"  :  0, 
-    "Team 8"  :  0, 
-    "Team 9"  :  0, 
-    "Team 10" :  0, 
-    "Team 11" :  0, 
-    "Team 12" :  0
-  };
+var teamNamesMap;
+var teamOddsMap;
 
 setup();
 
@@ -299,37 +273,15 @@ $('#roll3').click(function() {
 /**
  * FUNCTIONS
  **/
-function getPickNumbers(){
-  var teamNumbers = [[],[],[],[],[]];
-  $.getJSON("pickNumbersArray1.json", function(json) {
-    teamNumbers[0] = json;
-  });
-  $.getJSON("pickNumbersArray2.json", function(json) {
-    teamNumbers[1] = json; 
-  });
-  $.getJSON("pickNumbersArray3.json", function(json) {
-    teamNumbers[2] = json; 
-  });
-  $.getJSON("pickNumbersArray4.json", function(json) {
-    teamNumbers[3] = json; 
-  });
-  $.getJSON("pickNumbersArray5.json", function(json) {
-    teamNumbers[4] = json; 
-  });
-  return teamNumbers;
-}
-
 function setup() { 
   pickNumber = 1;
   pickOrder = [];
   threeRolls = [0,0,0];
   teamHasBeenPickedList = [false, false, false, false, false];
   combinationRolls = [];
-
   teamNumbers = getPickNumbers();
-  console.log(teamNumbers);
 
-  var teamNamesMap = {
+  teamNamesMap = {
     "Team 1"  :  "Scranton Stranglers", 
     "Team 2"  :  "Nuclear Guam", 
     "Team 3"  :  "Big Baller Brown", 
@@ -343,6 +295,7 @@ function setup() {
     "Team 11" :  "Wolf Wall", 
     "Team 12" :  "Tysons Traffic"
   };
+
   teamOddsMap = {
     "Team 1"  :  .430, 
     "Team 2"  :  .265, 
@@ -379,6 +332,7 @@ function setup() {
   document.getElementById("place4").style.fontStyle = "italic";
   document.getElementById("place5").style.fontSize = "18px";
   document.getElementById("place5").style.fontStyle = "italic";
+
   document.getElementById("place1").textContent = teamNamesMap["Team 1"] + " (" + (teamOddsMap["Team 1"]*100.0) + "%)";
   document.getElementById("place2").textContent = teamNamesMap["Team 2"] + " (" + (teamOddsMap["Team 2"]*100.0) + "%)";
   document.getElementById("place3").textContent = teamNamesMap["Team 3"] + " (" + (teamOddsMap["Team 3"]*100.0) + "%)";
@@ -393,14 +347,34 @@ function setup() {
   document.getElementById("place12").textContent = teamNamesMap["Team 12"];
 }
 
+function getPickNumbers(){
+  var teamNumbers = [[],[],[],[],[]];
+  $.getJSON("pickNumbersArray1.json", function(json) {
+    teamNumbers[0] = json;
+  });
+  $.getJSON("pickNumbersArray2.json", function(json) {
+    teamNumbers[1] = json; 
+  });
+  $.getJSON("pickNumbersArray3.json", function(json) {
+    teamNumbers[2] = json; 
+  });
+  $.getJSON("pickNumbersArray4.json", function(json) {
+    teamNumbers[3] = json; 
+  });
+  $.getJSON("pickNumbersArray5.json", function(json) {
+    teamNumbers[4] = json; 
+  });
+  return teamNumbers;
+}
+
 function rollNumber(nRoll) {
   var elementId = "bigNumber" + nRoll.toString();
   threeRolls[nRoll] = Math.floor(Math.random()*10);
   var elem = document.getElementById(elementId);
-  var id = setInterval(roll, 1);
+  var id = setInterval(roll, 75);
   var count = 0;
   function roll() {
-    if (count > 1) {
+    if (count > 40) {
       clearInterval(id);
       if (nRoll == 0) {
         firstRollLogic();
@@ -443,26 +417,6 @@ function finalRollLogic() {
   }
 }
 
-/*function determineTeamFromCombo(combo) {
-  if (combo < teamOddsMap["Team 1"]) {
-    teamHasBeenPickedList[0] = true;
-    return "Team 1";
-  } else if (combo < teamOddsMap["Team 1"] + teamOddsMap["Team 2"]) {
-    teamHasBeenPickedList[1] = true;
-    return "Team 2";
-  } else if (combo < teamOddsMap["Team 1"] + teamOddsMap["Team 2"] + teamOddsMap["Team 3"]) {
-    teamHasBeenPickedList[2] = true;
-    return "Team 3";
-  } else if (combo < teamOddsMap["Team 1"] + teamOddsMap["Team 2"] + teamOddsMap["Team 3"] + teamOddsMap["Team 4"]) {
-    teamHasBeenPickedList[3] = true;
-    return "Team 4";
-  } else if (combo < teamOddsMap["Team 1"] + teamOddsMap["Team 2"] + teamOddsMap["Team 3"] + teamOddsMap["Team 4"] + teamOddsMap["Team 5"]) {
-    teamHasBeenPickedList[4] = true;
-    return "Team 5";
-  } else {
-    throw "InvalidCombination";
-  }
-}*/
 function determineTeamFromCombo(combo) {
   console.log(combo);
   if (teamNumbers[0].indexOf(combo) >= 0) {
